@@ -103,6 +103,8 @@ cmd.shell.detail=The interactive shell offers console users a new user experienc
 cmd.sonar=Tool commandlet for SonarQube.
 cmd.sonar.detail=SonarQube is a platform for continuous inspection of code quality. Detailed documentation can be found at https://docs.sonarqube.org/
 cmd.sonar.val.command=Action to perform (START|STOP|ANALYZE)
+cmd.spring=Tool commandlet for Spring-Boot-CLI.
+cmd.spring.detail=Spring Boot is an extension of the Spring framework that simplifies the initial configuration of Spring applications. Detailed documentation can be found at https://spring.io/projects/spring-boot
 cmd.status=Prints the status report about your IDEasy.
 cmd.status.detail=To check your IDE-status (e.g. duplicated or legacy variables) as well as potential information about updates to settings you should apply\nwith ide update, run the following command: 'ide status'.
 cmd.terraform=Tool commandlet for Terraform.
