@@ -103,6 +103,8 @@ cmd.shell.detail=Die integrierte Shell bietet Konsolenbenutzer*Innen eine neue B
 cmd.sonar=Werkzeug Kommando für SonarQube.
 cmd.sonar.detail=SonarQube ist eine Plattform für die kontinuierliche Code-Qualitätsprüfung. Detaillierte Dokumentation ist zu finden unter https://docs.sonarqube.org/
 cmd.sonar.val.command=Auszuführende Aktion (START|STOP|ANALYZE)
+cmd.spring=Werkzeug Kommando für Spring-Boot-CLI.
+cmd.spring.detail=Spring Boot ist eine Erweiterung des Spring frameworks das die initiale Konfiguration von Spring Anwendungen vereinfacht. Detaillierte Dokumentation ist zu finden unter https://spring.io/projects/spring-boot
 cmd.status=Gibt einen Statusbericht über IDEasy aus
 cmd.status.detail=Um den Status Ihrer IDE zu überprüfen (z.B. doppelte oder veraltete Variablen) sowie potenzielle Informationen über Updates zu den Einstellungen,\ndie Sie mit dem Befehl 'ide update' anwenden sollten, führen Sie den folgenden Befehl aus: 'ide status'.
 cmd.terraform=Werkzeug Kommando für Terraform.
