@@ -9,6 +9,7 @@ import com.devonfw.tools.ide.git.GitContextMock;
 import com.devonfw.tools.ide.log.IdeLogLevel;
 import com.devonfw.tools.ide.log.IdeTestLogger;
 import com.devonfw.tools.ide.process.ProcessContext;
+import com.devonfw.tools.ide.tool.repository.MvnRepository;
 import com.devonfw.tools.ide.tool.repository.NpmRepository;
 import com.devonfw.tools.ide.tool.repository.ToolRepositoryMock;
 import com.github.tomakehurst.wiremock.junit5.WireMockRuntimeInfo;
@@ -119,4 +120,14 @@ public class IdeTestContext extends AbstractIdeTestContext {
     }
     return super.createNpmRepository();
   }
+
+  @Override
+  protected MvnRepository createMvnRepository() {
+    if (this.wireMockRuntimeInfo != null) {
+      return new MvnRepositoryMock(this, this.wireMockRuntimeInfo);
+    }
+    return super.createMvnRepository();
+  }
+
+
 }
