@@ -1,0 +1,1 @@
+${testbaseurl}/download/java/java/17.0.10_7/java-17.0.10_7.tgz
