@@ -1,0 +1,8 @@
+{
+  "[0,)": [
+    {
+      "tool": "java",
+      "versionRange": "[17,)"
+    }
+  ]
+}
