@@ -1,0 +1,2 @@
+JAVA_VERSION=17.0.10_7
+SPRING_VERSION=*
