@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<metadata>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-cli</artifactId>
+  <versioning>
+    <latest>4.0.0-M3</latest>
+    <release>4.0.0-M3</release>
+    <versions>
+      <version>2.4.0</version>
+    </versions>
+    <lastUpdated>20250918170145</lastUpdated>
+  </versioning>
+</metadata>
